Setup documents section in postman, fixed bugs and initiated swagger
